<resources>
    <string name="app_name">Cross Review</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="underline_app_name"><u>Cross Review</u></string>
    <string name="welcomeText">Cross Review is a leading background screening company now recognized as one of the most trusted and reliable partners for background screening services in India.</string>
    <string name="varifybtn">Verify Now</string>
    <string name="employer_info">Employer Information</string>
    <string name="name">Name*</string>
    <string name="yourname">Employee\'s Full Name</string>
    <string name="Email">Email*</string>
    <string name="email">email</string>
    <string name="contact">Phone Number*</string>
    <string name="phone">phone number</string>
    <string name="org_name">Organization Name*</string>
    <string name="orgName">Organization name</string>
    <string name="designation">Designation*</string>
    <string name="i_agree">I agree to the</string>
    <string name="terms_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="and">and</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="countinue">Continue</string>
    <string name="employee_detail">Employee Details</string>
    <string name="fathersname">father\'s Name*</string>
    <string name="fathername">Employee\'s Father\'s Name</string>
    <string name="gender">Gender*</string>
    <string name="selectgender">Select Gender</string>
    <string name="dob">DOB*</string>
    <string name="Dob">dob</string>
    <string name="contactdetail">Contact Detail</string>
    <string name="address1">Address*</string>
    <string name="address">address</string>
    <string name="City">City*</string>
    <string name="city">city</string>
    <string name="State">State*</string>
    <string name="state">state</string>
    <string name="address2">Address 2*</string>
    <string name="address_2">address 2</string>
    <string name="Zipcode">Pin Code*</string>
    <string name="zipcode">Pin Code</string>
    <string name="otherDetail">Other Details</string>
    <string name="DOJ">Date of Joining</string>
    <string name="doj">date of joining</string>
    <string name="DOI">Date of Interview*</string>
    <string name="doi">date of interview</string>
    <string name="emp_id">Employee ID*</string>
    <string name="Emp_id">Employee ID</string>
    <string name="uploadPhoto">Upload Photo*</string>
    <string name="Chosefile">chose file</string>
    <string name="upload">Upload picture/pdf</string>
    <string name="Next">Next</string>
    <string name="employee_status">Employee Status</string>
    <string name="emp_status">Employee are Fresher Or Experience?</string>
    <string name="fresher">Fresher</string>
    <string name="experience">Experience</string>
    <string name="employement_details">Employement Details</string>
    <string name="DOJ_company">Date of Joining the Company*</string>
    <string name="date">01/01/2020</string>
    <string name="DOR_company">Date of Relieving from the Company*</string>
    <string name="select_designation">Enter Designation</string>
    <string name="job_role">Job Role*</string>
    <string name="select_job_role">Enter Job Role</string>
    <string name="org_detail">Organization Detail</string>
    <string name="orgnization">Organiization*</string>
    <string name="reason_of_leaving">Reason of Leaving*</string>
    <string name="reasonOfLeaving">Reason of Leaving</string>
    <string name="Remuneration">Remuneration at the time of leaving the Company</string>
    <string name="selectPackge">select package</string>
    <string name="reporting_person">Reporting Person</string>
    <string name="Name">Name*</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_designation">Enter Designation</string>
    <string name="uploaddoc">Upload Documents*</string>
    <string name="add_employement">Add Employement</string>
    <string name="education_detail">Education Details</string>
    <string name="education_varification">Do you want to verify education details?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="education">Education*</string>
    <string name="course">Course*</string>
    <string name="select_course">select course</string>
    <string name="specialization">Specialization</string>
    <string name="select_sepecilization">select specialization</string>
    <string name="university">Select University / Institute*</string>
    <string name="universityDetails">University Details</string>
    <string name="fulltime">Full Time</string>
    <string name="parttime">Part time</string>
    <string name="correspondence">Correspondence/Distance Learning</string>
    <string name="course_type">Course Type*</string>
    <string name="passoutyear">Passout Year*</string>
    <string name="grade">Grading System</string>
    <string name="criminal_bg_verification">Do you want to verify criminal background?</string>
    <string name="criminal_bg_status">Criminal Background Details</string>
    <string name="police_verification">Police Verification</string>
    <string name="mothers_name">Mother\'s Name*</string>
    <string name="motherName">mother\'s name</string>
    <string name="birth_place">Place of Birth*</string>
    <string name="Placeofbirth">place of birth</string>
    <string name="languagespoken">Language  Spoken</string>
    <string name="language_spoken">language spoken</string>
    <string name="address_verification">Address Details</string>
    <string name="Permanenet_address">Permanent Address*</string>
    <string name="permanent_addr">permanent address</string>
    <string name="PostOffice">Post Office*</string>
    <string name="post_office">post office</string>
    <string name="Police_station">Police Station*</string>
    <string name="policeStation">police station</string>
    <string name="District">District*</string>
    <string name="district">district</string>
    <string name="Local_address">Local Address*</string>
    <string name="local_address">local address</string>
    <string name="identityProof">Proof of Identity</string>
    <string name="Aadhar_num">Aadhar Card Number*</string>
    <string name="aadhar_num">aadhar card number</string>
    <string name="Dl_num">Driving Licence Number</string>
    <string name="dl_num">driving licence number</string>
    <string name="Voter_id">Voter ID Number</string>
    <string name="voter_id">voter ID number</string>
    <string name="Passport_num">Passport Number</string>
    <string name="passport_num">passport number</string>
    <string name="Name_of_local_F_R">Name of Local Friend/Relative*</string>
    <string name="name_of_local_F_R">name of local friend/relative</string>
    <string name="ADDRESS">Address*</string>
    <string name="personal_details">Personal Deatils*</string>
    <string name="Height">Height</string>
    <string name="height">height</string>
    <string name="Weight">Weight</string>
    <string name="weight">weight</string>
    <string name="Complexion">Complexion</string>
    <string name="complexion">complexion</string>
    <string name="Identification_mark">Identification marks</string>
    <string name="identification_mark">identification marks</string>
    <string name="BasicInfo">Basic Information</string>
    <string name="DOB">DOB:</string>
    <string name="Gender">Gender</string>
    <string name="veriferdetails">Verifer Details</string>
    <string name="Company_name">Abc Technologies pvt Ltd</string>
    <string name="Company_address">Company address</string>
    <string name="verifer">Verifier:</string>
    <string name="EMAIL">abcsmith@abc.com</string>
    <string name="Contact">Contact</string>
    <string name="employer_details">Employer Details</string>
    <string name="Company_complete_add">abc Technologies Pvt Ltd, Spaze IT Park Sec 49, Gurgaon</string>
    <string name="salary">CTC 10Lac 45 thousand</string>
    <string name="reporting_per">Reporting Person:</string>
    <string name="reporting_per_designation">Reporting person Designation:</string>
    <string name="manager">Manger</string>
    <string name="uploaddocumnt">Uploaded Document</string>
    <string name="institute_name">"Indraprastha Technical University "</string>
    <string name="Course">B.Tech(Computer Science) Regular</string>
    <string name="Grade">Grade/percent</string>
    <string name="board">CBSE Board</string>
    <string name="police_verification_details">Police Verification Details</string>
    <string name="hight">6\'1</string>
    <string name="WEIGHT">82Kg</string>
    <string name="fair">Fair</string>
    <string name="Father_name">Father\'s name</string>
    <string name="Mothers_name">Mother\'s name</string>
    <string name="language">English, Hindi</string>
    <string name="place">Gurgaon</string>
    <string name="PersonalDetail">Personal Details</string>
    <string name="house_no">House No</string>
    <string name="num">123</string>
    <string name="village">Village</string>
    <string name="Lorem">Lorem</string>
    <string name="DISTRICT">District</string>
    <string name="STATE">Haryana</string>
    <string name="pin">Pin</string>
    <string name="PIN">121212</string>
    <string name="Makepayment">Make Payment</string>
    <string name="back">Back</string>
    <string name="login_to">Log In to</string>
    <string name="enter_email">Enter email</string>
    <string name="cantlogin">Can\'t Log in?</string>
    <string name="signup">Sign up for an account</string>
    <string name="otp">please enter OTP sent on your email</string>
    <string name="checkout">Checkout</string>
    <string name="paynow">Pay now</string>
    <string name="avaliable_point">Avaliable Points</string>
    <string name="employment_bg_check">Employment Background Check</string>
    <string name="employment_edu_check">Education Background Check</string>
    <string name="employment_criminal_bg_check">Criminal Background Check</string>
    <string name="total_points_paid">Total Points to be Paid</string>
    <string name="hi">Hi,</string>
    <string name="vistweb">Kindly, Visit WebSite to Add Money</string>
    <string name="url">https://www.crossreview.com/</string>
    <string name="letsgo">Let\'s Go</string>
    <string name="profileimg">Upload Profile Photo*</string>
    <string name="educataion">Select educataion Type</string>
    <string name="preview">Preview</string>
    <string name="year">Year</string>
    <string name="thanku">Thank You</string>
    <string name="great">Great!</string>
    <string name="paymentConfirm">Your payment has been confirmed.</string>
    <string name="checkemail">Check your email for details.</string>
    <string name="passout">passout year</string>
    <string name="fullName">*Please Enter Your Full Name.</string>
    <string name="emailAddres">*Please Enter Your Email Address.</string>
    <string name="phoneNum">*Please Enter Your Phone Number.</string>
    <string name="orgnizationname">" *Please Enter Your Organisation Name."</string>
    <string name="enterdesignation">*Please Enter Your Designation.</string>
    <string name="fName">*Please Enter Employee\'s Father Name.</string>
    <string name="selectgen">*Please Select Gender.</string>
    <string name="empfullName">*Please Enter Employee\'s Full Name.</string>
    <string name="empDob">*Please Enter Employee\'s DOB.</string>
    <string name="empAdd">*Please Enter Employee\'s Address.</string>
    <string name="empState">*Please Enter Employee\'s State.</string>
    <string name="empzip">*Please Enter at Least 5 digits.</string>
    <string name="empcity">*Please Enter Employee\'s City.</string>
    <string name="empdoj">*Please Enter Employee\'s Date of Joining.</string>
    <string name="empDoi">*Please Enter Employee\'s Date of Interview.</string>
    <string name="Designation">Designation</string>
</resources>