<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp20"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp10"
            android:layout_height="@dimen/dp10"
            android:layout_margin="@dimen/dp5"
            android:src="@drawable/ic_dot" />

        <TextView
            android:id="@+id/txt_address_type"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/permanent_addr"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp15"
        android:orientation="horizontal"
        android:padding="@dimen/dp10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/house_no"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/txt_house_no_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/village"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/txt_village"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Lorem"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp15"
        android:orientation="horizontal"
        android:padding="@dimen/dp10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/post_office"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/txt_post_office"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/place"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Police_station"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/txt_police_station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/place"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp15"
        android:orientation="horizontal"
        android:padding="@dimen/dp10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/DISTRICT"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/txt_district_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/place"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/state"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/txt_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/STATE"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp15"
        android:orientation="horizontal"
        android:padding="@dimen/dp10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/city"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/txt_city_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/place"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pin"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/txt_zipcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/PIN"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

    </LinearLayout>


</LinearLayout>