<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp10"
            android:layout_height="@dimen/dp10"
            android:layout_margin="@dimen/dp5"
            android:src="@drawable/ic_dot" />

        <TextView
            android:id="@+id/company_complete_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Company_complete_add"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_designation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp10"
                android:text="@string/Designation"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:id="@+id/txt_work_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp10"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:id="@+id/txt_salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp10"
                android:text="@string/salary"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/dp10"
                    android:text="@string/reporting_per"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/txt_reporting_person_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="@dimen/dp10"
                    android:text="@string/Name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_14" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/dp10"
                    android:text="@string/reporting_per_designation"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/txt_reporting_person_designataion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="@dimen/dp10"
                    android:text="@string/manager"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_14" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_upload_doc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp10"
            android:text="@string/uploaddocumnt"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/documentRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp10"
                tools:listitem="@layout/upload_documet_recycler_item" />




        </LinearLayout>


    </LinearLayout>


</LinearLayout>