<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp5"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp20"
        android:paddingRight="@dimen/dp20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp5"
            android:text="@string/Name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />


        <EditText
            android:id="@+id/txt_reporting_person_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/square_white_bg"
            android:hint="@string/enter_name"
            android:imeOptions="actionNext"
            android:maxLength="20"
            android:padding="@dimen/dp8"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp5"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp20"
        android:paddingTop="@dimen/dp20"
        android:paddingRight="@dimen/dp20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp5"
            android:text="@string/Designation"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />


        <EditText
            android:id="@+id/txt_job_role_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/square_white_bg"
            android:hint="@string/enter_designation"
            android:imeOptions="actionDone"
            android:maxLength="50"
            android:padding="@dimen/dp8"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

    </LinearLayout>


</LinearLayout>